--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
 asgiref==3.3.4
+certifi==2021.5.30
 Django==3.2.4
+django-elasticsearch-dsl==7.2.0
+django-elasticsearch-dsl-drf==0.22.1
+django-environ==0.4.5
+django-nine==0.2.4
+djangorestframework==3.12.4
+elasticsearch==7.13.1
+elasticsearch-dsl==7.3.0
 gunicorn==20.1.0
+# pkg-resources==0.0.0
 psycopg2==2.9.1
+python-dateutil==2.8.1
+python-decouple==3.4
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
+urllib3==1.26.5
 whitenoise==5.2.0
