checking env file

--- a/Django_Elastic_Search/.env
+++ b/Django_Elastic_Search/.env
@@ -2,3 +2,4 @@ SECRET_KEY=django-insecure-c$k582a5ms+_^kix7hrd8w1fr^y5&b*kx##(o@q2i=^q6+z(m-
 DB_NAME=elasticsearch
 DB_USER=manuel
 DB_PASSWORD=jw8s0F4
+# Anurag Nadda
