--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,32 @@
 asgiref==3.3.4
+astroid==2.6.2
 certifi==2021.5.30
 Django==3.2.4
+django-debug-toolbar==3.2.1
 django-elasticsearch-dsl==7.2.0
 django-elasticsearch-dsl-drf==0.22.1
 django-environ==0.4.5
 django-nine==0.2.4
+django-redis==5.0.0
 djangorestframework==3.12.4
 elasticsearch==7.13.1
 elasticsearch-dsl==7.3.0
 gunicorn==20.1.0
+isort==5.9.2
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
 # pkg-resources==0.0.0
 psycopg2==2.9.1
+pylint==2.9.3
+pylint-django==2.4.4
+pylint-plugin-utils==0.6
 python-dateutil==2.8.1
 python-decouple==3.4
 pytz==2021.1
+redis==3.5.3
 six==1.16.0
 sqlparse==0.4.1
+toml==0.10.2
 urllib3==1.26.5
 whitenoise==5.2.0
+wrapt==1.12.1
